--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></center></li>
         <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
       </ul>
     </div>
   </body>
