--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>
         <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/spfMSC"><i class="fa-brands fa-steam">&nbspTGK:spfMSC&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/spfMSC"><i class="fa-brands fa-telegram">&nbspTGK:spfMSC&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK:Performance🥷&nbsp</i></a></center></li>
       </ul>
     </div>
