--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1 class="username"><center><i class="fa-brands fa-java"></i>&nbspspfDRN&nbsp</center></h1>
+    <h1 class="username"><center><i class="fa-brands fa-python"></i>&nbspspfDRN&nbsp</center></h1>
     <div class="links">
       <ul>
         <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>
