--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <h1 class="username"><center><i class="fa-brands fa-java"></i>&nbspspfDRN&nbsp</center></h1>
     <div class="links">
       <ul>
-        <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>
-        <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>
+        <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>                 <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>
+        <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>                 <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></center></li>
-        <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
+        <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>                 <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
       </ul>
     </div>
   </body>
