--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" sizes="512x512" href="media/icon.png">
-<head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
-</head>
-<body>
-  <h1 class="username" style="text-align: center; font-weight: 900;"><i class="fa-brands fa-java"></i>&nbspspfDRN&nbsp</h1>
-  <div class="links">
-    <ul>
-      <li><a href="https://vk.com/spfdrn" style="text-align: center;"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></li>
-      <li><a href="https://discord.com/users/535143347325763596" style="text-align: center;"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></li>
-      <li><a href="https://t.me/spfdrn" style="text-align: center;"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></li>
-      <li><a href="https://steamcommunity.com/profiles/76561199077507798/" style="text-align: center;"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></li>
-      <li><a href="https://t.me/omegakaban69" style="text-align: center;"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></li>
-    </ul>
-  </div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+    </style>
+  </head>
+  <body>
+    <h1 class="username"><center><i class="fa-brands fa-java"></i>&nbspspfDRN&nbsp</center></h1>
+    <div class="links">
+      <ul>
+        <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>
+        <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></center></li>
+        <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
+      </ul>
+    </div>
+  </body>
 </html>
