--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
     </style>
   </head>
   <body>
-    <h1 class="username"><center><i class="fa-brands fa-java"></i>&nbspspfDRN&nbsp</center></h1>
+    <h1 class="username"><center><i class="fa-brands fa-telegram"></i>&nbspspfDRN&nbsp</center></h1>
     <div class="links">
       <ul>
-        <li><center><a href="https://vk.com/spfdrn"><i class="fa-brands fa-vk">&nbspVKontakte&nbsp</i></a></center></li>
-        <li><center><a href="https://discord.com/users/535143347325763596"><i class="fa-brands fa-discord">&nbspDiscord&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspTelegram&nbsp</i></a></center></li>
-        <li><center><a href="https://steamcommunity.com/profiles/76561199077507798/"><i class="fa-brands fa-steam">&nbspSteam&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspTGK&nbsp</i></a></center></li>
+        <p style=»text-align: center;»>spfSQUAD:</p>
+        <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspspfDRN&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/spfGRF"><i class="fa-brands fa-telegram">&nbspspfGRF&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/spfMSC"><i class="fa-brands fa-telegram">&nbspspfMSC&nbsp</i></a></center></li>
+        <p style=»text-align: center;»>Others:</p>
+        <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspPerformance&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/funtimepvp"><i class="fa-brands fa-telegram">&nbspBabaKapa&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/babakapawb"><i class="fa-brands fa-telegram">&nbspBabaKapaWB&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/Avantify"><i class="fa-brands fa-telegram">&nbspspfAvantify❤️&nbsp</i></a></center></li>
       </ul>
     </div>
   </body>
