--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <h1 class="username"><center><i class="fa-brands fa-telegram"></i>&nbspspfDRN&nbsp</center></h1>
     <div class="links">
       <ul>
-        <p style=»text-align: center;»>spfSQUAD:</p>
+        <p class="username" style=»text-align: center;»>spfSQUAD:</p>
         <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspspfDRN&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfGRF"><i class="fa-brands fa-telegram">&nbspspfGRF&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfMSC"><i class="fa-brands fa-telegram">&nbspspfMSC&nbsp</i></a></center></li>
-        <p style=»text-align: center;»>Others:</p>
+        <p class="username" style=»text-align: center;»>Others:</p>
         <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspPerformance&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/funtimepvp"><i class="fa-brands fa-telegram">&nbspBabaKapa&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/babakapawb"><i class="fa-brands fa-telegram">&nbspBabaKapaWB&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/Avantify"><i class="fa-brands fa-telegram">&nbspspfAvantify❤️&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/Avantify"><i class="fa-brands fa-telegram">&nbsAvantify❤️&nbsp</i></a></center></li>
       </ul>
     </div>
   </body>
