--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" sizes="512x512" href="media/icon.png">
-<!DOCTYPE html>
 <html>
   <head>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+      .username, .links p {
+        font-weight: 900;
+        font-family: 'Roboto', sans-serif;
+        text-align: center;
+      }
+      @import url('https://use.fontawesome.com/releases/v5.15.4/css/all.css');
     </style>
   </head>
   <body>
     <h1 class="username"><center><i class="fa-brands fa-telegram"></i>&nbspspfDRN&nbsp</center></h1>
     <div class="links">
       <ul>
-        <p class="username" style=»text-align: center;»>spfSQUAD:</p>
+        <p class="username">spfSQUAD:</p>
         <li><center><a href="https://t.me/spfdrn"><i class="fa-brands fa-telegram">&nbspspfDRN&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfGRF"><i class="fa-brands fa-telegram">&nbspspfGRF&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/spfMSC"><i class="fa-brands fa-telegram">&nbspspfMSC&nbsp</i></a></center></li>
-        <p class="username" style=»text-align: center;»>Others:</p>
+        <p class="username">Others:</p>
         <li><center><a href="https://t.me/omegakaban69"><i class="fa-brands fa-telegram">&nbspPerformance&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/funtimepvp"><i class="fa-brands fa-telegram">&nbspBabaKapa&nbsp</i></a></center></li>
         <li><center><a href="https://t.me/babakapawb"><i class="fa-brands fa-telegram">&nbspBabaKapaWB&nbsp</i></a></center></li>
-        <li><center><a href="https://t.me/Avantify"><i class="fa-brands fa-telegram">&nbsAvantify❤️&nbsp</i></a></center></li>
+        <li><center><a href="https://t.me/Avantify"><i class="fa-brands fa-telegram">&nbspAvantify❤️&nbsp</i></a></center></li>
       </ul>
     </div>
   </body>
